--- a/app/src/main/res/layout/activity_personal_patient.xml
+++ b/app/src/main/res/layout/activity_personal_patient.xml
@@ -22,14 +22,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
-        android:background="#F5F5F5"
+        android:background="#FFFFFF"
         app:tabGravity="fill"
         app:tabMaxWidth="0dp"
         app:tabMode="fixed"
         android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:tabIndicatorColor="@color/primary"
-        app:tabTextColor="#545454">
+        app:tabIndicatorColor="@null"
+        app:tabTextColor="#545454"
+        app:tabSelectedTextColor="@color/many">
 
     </android.support.design.widget.TabLayout>
 
