--- a/app/src/main/res/layout/fragment_spiral_right.xml
+++ b/app/src/main/res/layout/fragment_spiral_right.xml
@@ -17,7 +17,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <LinearLayout
         android:id="@+id/spiral_graph"
         android:layout_width="match_parent"
@@ -32,9 +31,12 @@
             android:id="@+id/measure"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent">
-
+            app:layout_constraintTop_toTopOf="parent"
+            app:tabGravity="fill"
+            app:tabIndicatorColor="@color/many"
+            >
         </android.support.design.widget.TabLayout>
+
         <com.jjoe64.graphview.GraphView
             android:id="@+id/graph"
             android:layout_width="match_parent"
@@ -54,26 +56,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spiral_graph" />
 
-    <Button
-        android:id="@+id/rectangle_list"
-        android:layout_width="@dimen/T30"
-        android:layout_height="@dimen/T30"
-        android:layout_marginEnd="@dimen/imageWeight"
-        android:layout_marginTop="@dimen/imageWeight"
-        android:background="@drawable/down"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spiral_graph" />
-
-    <Button
-        android:id="@+id/list"
-        android:layout_width="@dimen/T30"
-        android:layout_height="@dimen/T30"
-        android:layout_marginEnd="@dimen/patientListMargin2"
-        android:layout_marginTop="@dimen/imageWeight"
-        android:background="@drawable/down"
-        app:layout_constraintEnd_toStartOf="@+id/rectangle_list"
-        app:layout_constraintTop_toBottomOf="@+id/spiral_graph" />
     <View
+        android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginStart="@dimen/imageWeight"
@@ -85,15 +69,15 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
 
-    <FrameLayout
-        android:id="@+id/personal_spiral_taskList"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/personal_taskList"
         android:layout_width="727dp"
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="645dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/view" />
 
 </android.support.constraint.ConstraintLayout>
