--- a/app/src/main/res/layout/toast_custom.xml
+++ b/app/src/main/res/layout/toast_custom.xml
@@ -8,16 +8,12 @@
 
     <TextView
         android:id="@+id/imageView5"
-        android:layout_width="748dp"
-        android:layout_height="78dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/green_gradient_rounded"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/S34"
+        android:background="@color/many"
         android:gravity="center_vertical|center_horizontal"
-        android:rotation="270"
-        android:text="그림을 주변 선에 닿지 않게 그리도록 한다. 팔꿈치나 손이 책상에 닿지 않게 한다."
+        android:text="기기를 돌려 검사를 진행하시오.\n\n주변 선에 닿지 않게 그린다.\n팔꿈치나 손이 책상에 닿지 않게 한다."
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
