--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -22,11 +22,11 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="68dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="@dimen/S34"
+            android:layout_marginTop="@dimen/T25"
             android:text="직전 결과 비교"
             android:textColor="#545454"
-            android:textSize="20sp"
+            android:textSize="@dimen/TX20"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/toolbar" />
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/T25"
             app:layout_constraintTop_toBottomOf="@id/textView5">
 
             <LinearLayout
@@ -61,10 +61,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_weight="0.1"
+                    android:layout_weight="1"
                     android:text="직전 결과"
                     android:textColor="#545454"
-                    android:textSize="20dp"
+                    android:textSize="@dimen/TX20"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -74,9 +74,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_weight="0.1"
+                    android:layout_weight="1"
                     android:textColor="#545454"
-                    android:textSize="14dp"
+                    android:textSize="@dimen/textSize3"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -107,7 +107,7 @@
                     android:layout_weight="1"
                     android:text="이번 결과"
                     android:textColor="#545454"
-                    android:textSize="20dp"
+                    android:textSize="@dimen/TX20"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -119,7 +119,7 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1"
                     android:textColor="#545454"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/textSize3"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -130,15 +130,15 @@
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="@dimen/H50"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@id/imageLayout">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="45dp"
-                android:layout_marginEnd="45dp"
+                android:layout_height="@dimen/H60"
+                android:layout_marginStart="@dimen/W45"
+                android:layout_marginEnd="@dimen/W45"
                 android:layout_weight="1"
 
                 android:background="@drawable/bottom_blackline">
@@ -166,7 +166,7 @@
                     android:gravity="center"
                     android:text="직전결과"
                     android:textAlignment="center"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/TX20"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_chainStyle="spread"
                     app:layout_constraintHorizontal_weight="1"
@@ -182,7 +182,7 @@
                     android:gravity="center_horizontal"
                     android:text="이번결과"
                     android:textAlignment="center"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/TX20"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintLeft_toRightOf="@id/result"
@@ -193,9 +193,9 @@
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="45dp"
-                android:layout_marginEnd="45dp"
+                android:layout_height="@dimen/H60"
+                android:layout_marginStart="@dimen/W45"
+                android:layout_marginEnd="@dimen/W45"
                 android:layout_weight="1"
                 android:background="@drawable/bottom_blackline">
 
@@ -205,7 +205,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:text="1초당 떨림의 횟수"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/TX20"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_chainStyle="spread"
                     app:layout_constraintHorizontal_weight="1.5"
@@ -220,7 +220,7 @@
                     android:layout_gravity="center_vertical"
                     android:gravity="center"
                     android:textAlignment="center"
-                    android:textSize="24sp"
+                    android:textSize="@dimen/textSize5"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_chainStyle="spread"
                     app:layout_constraintHorizontal_weight="1"
@@ -236,7 +236,7 @@
                     android:gravity="center_horizontal"
                     android:text="이번결과"
                     android:textAlignment="center"
-                    android:textSize="24sp"
+                    android:textSize="@dimen/textSize5"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintLeft_toRightOf="@id/hz_result"
@@ -247,9 +247,9 @@
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="45dp"
-                android:layout_marginEnd="45dp"
+                android:layout_height="@dimen/H60"
+                android:layout_marginStart="@dimen/W45"
+                android:layout_marginEnd="@dimen/W45"
                 android:layout_weight="1"
                 android:background="@drawable/bottom_blackline">
 
@@ -259,7 +259,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:text="떨림의 세기"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/TX20"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_chainStyle="spread"
                     app:layout_constraintHorizontal_weight="1.5"
@@ -274,7 +274,7 @@
                     android:layout_gravity="center_vertical"
                     android:gravity="center"
                     android:textAlignment="center"
-                    android:textSize="24sp"
+                    android:textSize="@dimen/textSize5"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_chainStyle="spread"
                     app:layout_constraintHorizontal_weight="1"
@@ -290,7 +290,7 @@
                     android:gravity="center_horizontal"
                     android:text="이번결과"
                     android:textAlignment="center"
-                    android:textSize="24sp"
+                    android:textSize="@dimen/textSize5"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintLeft_toRightOf="@id/mag_result"
@@ -301,9 +301,9 @@
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="45dp"
-                android:layout_marginEnd="45dp"
+                android:layout_height="@dimen/H60"
+                android:layout_marginStart="@dimen/W45"
+                android:layout_marginEnd="@dimen/W45"
                 android:layout_weight="1"
                 android:background="@drawable/bottom_blackline">
 
@@ -313,7 +313,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:text="목표선에 벗어난 거리"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/TX20"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_chainStyle="spread"
                     app:layout_constraintHorizontal_weight="1.5"
@@ -328,7 +328,7 @@
                     android:layout_gravity="center_vertical"
                     android:gravity="center"
                     android:textAlignment="center"
-                    android:textSize="24sp"
+                    android:textSize="@dimen/textSize5"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_chainStyle="spread"
                     app:layout_constraintHorizontal_weight="1"
@@ -344,7 +344,7 @@
                     android:gravity="center_horizontal"
                     android:text="이번결과"
                     android:textAlignment="center"
-                    android:textSize="24sp"
+                    android:textSize="@dimen/textSize5"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintLeft_toRightOf="@id/distance_result"
@@ -355,9 +355,9 @@
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="45dp"
-                android:layout_marginEnd="45dp"
+                android:layout_height="@dimen/H60"
+                android:layout_marginStart="@dimen/W45"
+                android:layout_marginEnd="@dimen/W45"
                 android:layout_weight="1"
                 android:background="@drawable/bottom_blackline">
 
@@ -367,7 +367,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:text="검사 수행 시간"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/TX20"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_chainStyle="spread"
                     app:layout_constraintHorizontal_weight="1.5"
@@ -382,7 +382,7 @@
                     android:layout_gravity="center_vertical"
                     android:gravity="center"
                     android:textAlignment="center"
-                    android:textSize="24sp"
+                    android:textSize="@dimen/textSize5"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_chainStyle="spread"
                     app:layout_constraintHorizontal_weight="1"
@@ -398,7 +398,7 @@
                     android:gravity="center_horizontal"
                     android:text="이번결과"
                     android:textAlignment="center"
-                    android:textSize="24sp"
+                    android:textSize="@dimen/textSize5"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintLeft_toRightOf="@id/time_result"
@@ -409,9 +409,9 @@
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="45dp"
-                android:layout_marginEnd="45dp"
+                android:layout_height="@dimen/H60"
+                android:layout_marginStart="@dimen/W45"
+                android:layout_marginEnd="@dimen/W45"
                 android:layout_weight="1"
                 android:background="@drawable/bottom_blackline">
 
@@ -421,7 +421,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:text="검사 평균 속도"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/TX20"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_chainStyle="spread"
                     app:layout_constraintHorizontal_weight="1.5"
@@ -436,7 +436,7 @@
                     android:layout_gravity="center_vertical"
                     android:gravity="center"
                     android:textAlignment="center"
-                    android:textSize="24sp"
+                    android:textSize="@dimen/textSize5"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_chainStyle="spread"
                     app:layout_constraintHorizontal_weight="1"
@@ -452,7 +452,7 @@
                     android:gravity="center_horizontal"
                     android:text="이번결과"
                     android:textAlignment="center"
-                    android:textSize="24sp"
+                    android:textSize="@dimen/textSize5"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintLeft_toRightOf="@id/speed_result"
@@ -466,25 +466,25 @@
             android:id="@+id/result_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="50dp"
+            android:layout_marginTop="@dimen/T30"
+            android:layout_marginStart="@dimen/H50"
+            android:layout_marginEnd="@dimen/H50"
             android:gravity="left|center_vertical"
             android:text="이전 결과 추이"
-            android:paddingEnd="20dp"
-            android:paddingStart="20dp"
+            android:paddingEnd="@dimen/T25"
+            android:paddingStart="@dimen/T25"
             android:drawableRight="@drawable/down"
             android:textStyle="bold"
-            android:textSize="20sp"
+            android:textSize="@dimen/TX20"
             android:background="@drawable/white_rounded"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/spiral_graph"
             android:layout_width="match_parent"
-            android:layout_height="430dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginStart="50dp"
+            android:layout_height="@dimen/H420"
+            android:layout_marginEnd="@dimen/H50"
+            android:layout_marginStart="@dimen/H50"
             app:layout_constraintTop_toBottomOf="@+id/result_button" >
 
             <android.support.design.widget.TabLayout
@@ -499,14 +499,13 @@
             <com.jjoe64.graphview.GraphView
                 android:id="@+id/graph"
                 android:layout_width="match_parent"
-                android:layout_height="380dp"
+                android:layout_height="@dimen/H380"
                 app:layout_constraintTop_toBottomOf="@+id/measure" >
             </com.jjoe64.graphview.GraphView>
-
         </android.support.constraint.ConstraintLayout>
         <View
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="@dimen/S34"
             app:layout_constraintTop_toBottomOf="@+id/spiral_graph"/>
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
