--- a/app/src/main/res/layout/task_list.xml
+++ b/app/src/main/res/layout/task_list.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardview1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -28,7 +27,7 @@
                 android:text="01"
                 android:textColor="#ffffff"
                 android:textStyle="bold"
-                android:textSize="18dp" />
+                android:textSize="@dimen/textSize2" />
             <TextView
                 android:id="@+id/taskDate"
                 android:layout_marginStart="@dimen/T25"
@@ -38,12 +37,12 @@
                 android:layout_gravity="center_vertical"
                 android:textColor="#ffffff"
                 android:textStyle="bold"
-                android:textSize="18dp" />
+                android:textSize="@dimen/textSize2" />
         </LinearLayout>
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="10">
 
             <TextView
@@ -52,19 +51,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/W10"
                 android:layout_marginTop="8dp"
-                android:text="L"
                 android:textColor="#545454"
-                android:textSize="25dp"
+                android:textSize="@dimen/textSize5"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="400px"
-                android:layout_height="400px"
-                android:layout_marginTop="40px"
-                android:layout_marginBottom="40px"
+                android:layout_width="@dimen/H280"
+                android:layout_height="@dimen/H280"
                 android:rotation="90"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
