--- a/app/src/main/res/values-mdpi/dimens.xml
+++ b/app/src/main/res/values-mdpi/dimens.xml
@@ -47,6 +47,7 @@
     <dimen name="textSize5">15sp</dimen>
     <dimen name="personalDotW">18.75dp</dimen>
 
+    <dimen name="W45">28dp</dimen>
     <dimen name="H110">61dp</dimen>
     <dimen name="S34">21.25dp</dimen>
     <dimen name="T25">10dp</dimen>
@@ -61,9 +62,10 @@
     <dimen name="S230">143.75dp</dimen>
     <dimen name="S458">286.25dp</dimen>
     <dimen name="T30">18.75dp</dimen>
-    <dimen name="H430">238.89dp</dimen>
+    <dimen name="H380">238.89dp</dimen>
 
     <dimen name="W400">250dp</dimen>
+    <dimen name="H420">290dp</dimen>
     <dimen name="H280">175dp</dimen>
     <dimen name="S70">43.75dp</dimen>
     <dimen name="S80">50dp</dimen>
