--- a/app/src/main/res/layout/activity_personal_result.xml
+++ b/app/src/main/res/layout/activity_personal_result.xml
@@ -18,26 +18,13 @@
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme" />
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/S34"
-            android:layout_marginTop="40px"
-            android:text="직전 결과 비교"
-            android:textColor="#545454"
-            android:textSize="@dimen/TX20"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar" />
-
         <LinearLayout
             android:id="@+id/imageLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="40px"
-            app:layout_constraintTop_toBottomOf="@id/textView5">
+            app:layout_constraintTop_toBottomOf="@id/toolbar">
 
             <LinearLayout
                 android:layout_width="wrap_content"
