--- a/app/src/main/res/layout/fragment_spiral_right.xml
+++ b/app/src/main/res/layout/fragment_spiral_right.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
@@ -43,7 +44,6 @@
             android:layout_height="match_parent">
         </com.jjoe64.graphview.GraphView>
     </LinearLayout>
-
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
@@ -71,13 +71,14 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/personal_taskList"
-        android:layout_width="727dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="@dimen/patientListMargin"
+        android:layout_marginTop="@dimen/patientListMargin2"
+        android:layout_marginEnd="@dimen/patientListMargin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
 
-</android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
