--- a/app/src/main/res/menu/result_toolbar.xml
+++ b/app/src/main/res/menu/result_toolbar.xml
@@ -11,4 +11,9 @@
         android:icon="@drawable/ic_add"
         android:title="Item"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/list"
+        android:icon="@drawable/ic_action_home"
+        android:title="Item"
+        app:showAsAction="always" />
 </menu>
